<resources>
    <string name="app_name">carat</string>
    <string name="create_user">계정 생성하기</string>
    <string name="already_user">이미 계정이 있으신가요?</string>
    <string name="create_an_user">계정을 생성하세요</string>
    <string name="login">로그인</string>
    <string name="signInUp">가입하기</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="carat_login">캐럿에 로그인하세요</string>
    <string name="forgot_password">비밀번호를 잊으셨나요?</string>
    <string name="introduction">자기소개</string>
    <string name="logOut">로그아웃</string>
    <string name="recarring_carring">내가 리캐링한 캐링</string>
    <string name="change_profile">프로필 수정</string>
    <string name="check">확인</string>
    <string name="cancellation">취소</string>
    <string name="logout_message">정말로 로그아웃 하시겠습니까?</string>
    <string name="home">홈</string>
    <string name="profile">프로필</string>
    <string name="writing_message">무슨 일이 일어나고 있나요?</string>
    <string name="carring">캐링</string>
    <string name="carat">캐럿</string>
    <string name="start_comment">당신의 보석같은 순간을\n캐럿에 공유하세요</string>
</resources>