<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="137dp"
    android:layout_gravity="center"
    android:background="@drawable/border_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/logout_message"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/mLeftButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#0000"
            android:text="@string/cancellation"
            android:textColor="@color/black" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <Button
            android:id="@+id/mRightButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#0000"
            android:text="@string/check"
            android:textColor="@color/black" />
    </LinearLayout>

</LinearLayout>